--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,6 +33,37 @@ body {
     width: 5%;
 }
 
+.carousel-inner__item {
+    height: 70vh;
+}
+
+.carousel-inner__item img{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+#card-index {
+    position: relative;
+    height: 80vh;
+    width: 100%;
+}
+
+#historia-index {
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    background-color: #7371cc8c;
+    color: #fff;
+    padding: 5px;
+}
+
+.barra-lateral {
+    position: fixed;
+    top: 40%;
+    right: 2px;
+}
+
 footer {
     bottom: 0px;
 }
